--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@json-editor/json-editor": "^1.3.2",
     "@vue/eslint-config-standard": "^4.0.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
