--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@json-editor/json-editor": "^1.3.2",
     "@vue/eslint-config-standard": "^4.0.0",
+    "element-ui": "^2.4.5",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.4",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xm-mui": "^1.0.162"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.0",
@@ -26,6 +28,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.5.21"
   }
 }
