--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.4",
+    "vuedraggable": "^2.17.0",
     "vuex": "^3.0.1",
     "xm-mui": "^1.0.162"
   },
