--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@json-editor/json-editor": "^1.3.2",
-    "@vue/eslint-config-standard": "^4.0.0",
+    "dayjs": "^1.8.6",
     "element-ui": "^2.4.5",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
@@ -21,8 +20,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.0",
     "@vue/cli-plugin-eslint": "^3.1.0",
+    "@vue/eslint-config-standard": "^4.0.0",
     "@vue/cli-service": "^3.1.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-component": "^1.1.1",
     "eslint": "^5.8.0",
